# simple-communication

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile
include/comm/: lib.h
include/common/: non_copyable.h  system.h
include/io/: device.h  handle.h  pseudo_serial.h  serial.h  system.h
include/xmodem/: checksum.h  crc.h  defines.h  endpoint.h  error_detection.h  packet.h  receiver.h  symbol.h  transmitter.h
src/comm/: lib.cc
src/interface/: main.cc
src/io/: device.cc  pseudo_serial.cc  serial.cc
src/xmodem/: checksum.cc  crc.cc  endpoint.cc  packet.cc  receiver.cc  transmitter.cc
test/: pseudo_serial_test.cc  sample_file_recv.txt  simple_test.cc  xmodem_transmission_test.cc
